modules/core/client/css/core.css
@media (max-width: 767px) {
  #video-header {
    margin-top: 30px;
  }

  .category {
    height: 150px;
    width: 100%;
    color: white;
    padding-top: 100px;
  }

  #search-reveal {
    display: none;
  }
}

body {
  background-color: #f5f5f5;
}

@media (min-width: 768px) and (max-width: 992px) {
  #video-header {
    margin-top: 75px;
  }

  .category {
    height: 250px;
    width: 100%;
    color: white;
    padding-top: 200px;
  }

  #search-bar {
    display: none;
  }
}

@media (min-width: 992px) and (max-width: 1200px) {
  #video-header {
    margin-top: 120px;
  }

  .category {
    height: 300px;
    width: 100%;
    color: white;
    padding-top: 250px;
  }

  #search-reveal {
    display: none;
  }
}

@media (min-width: 1200px) {
  #video-header {
    margin-top: 120px;
  }

  .category {
    height: 300px;
    width: 100%;
    color: white;
    padding-top: 100px;
  }

  #search-reveal {
    display: none;
  }
}

.content {
  margin-top: 50px;
}

.undecorated-link:hover {
  text-decoration: none;
}

[ng\:cloak],
[ng-cloak],
[x-ng-cloak],
.ng-cloak,
.x-ng-cloak {
  display: none !important;
}

.header-profile-image {
  opacity: 0.8;
  height: 28px;
  width: 28px;
  border-radius: 50%;
  margin-right: 5px;
}

.open .header-profile-image,
a:hover .header-profile-image {
  opacity: 1;
}

.user-header-dropdown-toggle {
  padding-top: 11px !important;
  padding-bottom: 11px !important;
}

.error-text {
  display: none;
}

.has-error .help-block.error-text {
  display: block;
}

.has-error .help-inline.error-text {
  display: inline;
}

.horizAlign div {
  float: left;
  clear: none;
}

.textCenter {
  text-align: center;
}

/*centers page */
.pic {
  display:block;
    margin:auto;
    height: 50%;
    width: 50%;
}

#about {
  background-color: #B2C9E2;
  background-image: none;
}

#announcements {
  background-color: #B2C9E2;
  background-image: none;
}

#contact {
  background-color: #B2C9E2;
  background-image: none;
}

.bottMargin{
  margin-bottom: 20px;
}

video {
  z-index: -1;
  overflow: hidden;
  min-width: 100% !important;
}

.video-text {
  z-index: 1;
  color: white;
}

#footer-divider {
  background-color: #FF4A00;
  width: 100%;
  height: 10px;
}

#monogram {
  z-index: 1;
  margin-top: -18px;
}

#brand {
  max-height: 45px;
  margin-top: -10px;
}

#cat1 {
  background-color: #814374;
}

#cat2 {
  background-color: #51A39D;
}

#cat3 {
  background-color: #B7695C;
}

#cat4 {
  background-color: #CDBB79;
}

#cat5 {
  background-color: #06425C;
}

#cat-title {
  margin-top: -125px;
  text-align: center;
}
.social-media-icon {
  color: black;
}

